// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Courses Queries should return a single courses 1`] = `
Object {
  "data": Object {
    "courseDetails": Object {
      "id": "5fdab398791e134a5466566f",
      "name": "Aerospace Engineerng",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Courses Queries should return all courses 1`] = `
Object {
  "data": Object {
    "allCourses": Object {
      "results": Array [
        Object {
          "id": "5fdab398791e134a5466566f",
        },
        Object {
          "id": "5fdab4b5eed1fb397feaca14",
        },
        Object {
          "id": "5fdab4bd78cc9321b31faf35",
        },
        Object {
          "id": "5fdab4c4fe1aa062abc46096",
        },
        Object {
          "id": "5fdab4ccba6dcf525408412a",
        },
      ],
      "total": 4,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Courses Queries should throw an error if a single course is not found 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Something went wrong: Error: Course not found],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
